cbits/Bullet.h

float btSoftBody_Material_m_kAST_get(void *c); //attribute: ::btScalar btSoftBody_Material->m_kAST
void btSoftBody_Material_m_kLST_set(void *c,float a); //attribute: ::btScalar btSoftBody_Material->m_kLST
float btSoftBody_Material_m_kLST_get(void *c); //attribute: ::btScalar btSoftBody_Material->m_kLST
void btSoftBody_Material_m_kVST_set(void *c,float a); //attribute: ::btScalar btSoftBody_Material->m_kVST
float btSoftBody_Material_m_kVST_get(void *c); //attribute: ::btScalar btSoftBody_Material->m_kVST
void* btSoftBody_Node_new(); //constructor: Node  ( ::btSoftBody::Node::* )(  ) 
void btSoftBody_Node_free(void *c);
 
void btSoftBody_Node_m_area_set(void *c,float a); //attribute: ::btScalar btSoftBody_Node->m_area
float btSoftBody_Node_m_area_get(void *c); //attribute: ::btScalar btSoftBody_Node->m_area
void btSoftBody_Node_m_battach_set(void *c,int a); //attribute: int btSoftBody_Node->m_battach
int btSoftBody_Node_m_battach_get(void *c); //attribute: int btSoftBody_Node->m_battach
void btSoftBody_Node_m_f_set(void *c,float* a); //attribute: ::btVector3 btSoftBody_Node->m_f
void btSoftBody_Node_m_f_get(void *c,float* a);
void btSoftBody_Node_m_im_set(void *c,float a); //attribute: ::btScalar btSoftBody_Node->m_im
float btSoftBody_Node_m_im_get(void *c); //attribute: ::btScalar btSoftBody_Node->m_im
void btSoftBody_Node_m_leaf_set(void *c,void* a); //attribute: ::btDbvtNode * btSoftBody_Node->m_leaf
void* btSoftBody_Node_m_leaf_get(void *c); //attribute: ::btDbvtNode * btSoftBody_Node->m_leaf
void btSoftBody_Node_m_n_set(void *c,float* a); //attribute: ::btVector3 btSoftBody_Node->m_n
void btSoftBody_Node_m_n_get(void *c,float* a);
void btSoftBody_Node_m_q_set(void *c,float* a); //attribute: ::btVector3 btSoftBody_Node->m_q
void btSoftBody_Node_m_q_get(void *c,float* a);
void btSoftBody_Node_m_v_set(void *c,float* a); //attribute: ::btVector3 btSoftBody_Node->m_v
void btSoftBody_Node_m_v_get(void *c,float* a);
void btSoftBody_Node_m_x_set(void *c,float* a); //attribute: ::btVector3 btSoftBody_Node->m_x
void btSoftBody_Node_m_x_get(void *c,float* a);
void* btSoftBody_Note_new(); //constructor: Note  ( ::btSoftBody::Note::* )(  ) 
void btSoftBody_Note_free(void *c);
 
void btSoftBody_Note_m_text_set(void *c,char const * a); //attribute: char const * btSoftBody_Note->m_text
char const * btSoftBody_Note_m_text_get(void *c); //attribute: char const * btSoftBody_Note->m_text
void btSoftBody_Note_m_offset_set(void *c,float* a); //attribute: ::btVector3 btSoftBody_Note->m_offset
void btSoftBody_Note_m_offset_get(void *c,float* a);
void btSoftBody_Note_m_rank_set(void *c,int a); //attribute: int btSoftBody_Note->m_rank
int btSoftBody_Note_m_rank_get(void *c); //attribute: int btSoftBody_Note->m_rank
// attribute not supported: //attribute: ::btSoftBody::Node *[4] btSoftBody_Note->m_nodes
// attribute not supported: //attribute: ::btScalar[4] btSoftBody_Note->m_coords
void* btSoftBody_Pose_new(); //constructor: Pose  ( ::btSoftBody::Pose::* )(  ) 
void btSoftBody_Pose_free(void *c);
 
void btSoftBody_Pose_m_bvolume_set(void *c,int a); //attribute: bool btSoftBody_Pose->m_bvolume
int btSoftBody_Pose_m_bvolume_get(void *c); //attribute: bool btSoftBody_Pose->m_bvolume
void btSoftBody_Pose_m_bframe_set(void *c,int a); //attribute: bool btSoftBody_Pose->m_bframe
int btSoftBody_Pose_m_bframe_get(void *c); //attribute: bool btSoftBody_Pose->m_bframe